tutoring-site/styles/Courses.module.scss
@import "variables";
@import "mixins";

// For top half section
.topSection {
  background-color: $lightest;
  min-height: 40vh;
  width: 100%;
  padding-top: 10vh;

  .bubblesTopLeft {
    position: absolute;
    height: auto;
    width: 30vh;
  }

  .titlesContainer, .searchContainer {
    @include coursesHorizontalPadding;
    position: relative;

    .title {
      color: $dark;
      font-size: 3.6vh;
    }
    .subtitle {
      margin-top: -10px;
      color: $darkest;
      font-size: 2vh;
    }
    .arrowButton {
      font-size: 3.5vh;
      margin-left: 10px;
      margin-top: 5px;
      margin-bottom: -8px;
      color: $light-1;
      background-color: $dark;
      border-radius: 50%;
      transition: .2s ease-in-out;
      

      &:hover {
        background-color: $light-1;
        color: $dark;
      }
    }
  }

  .searchContainer {
    margin-top: 2vh;

    .gradeSliderContainer {
      background-color: $light-1;
      border-radius: 60px;
      padding: 16.5px;
      padding-left: 25px;
      padding-right: 35px;

      .gradeLabel {
        font-family: $OpenSans;
        color: $dark;
        font-weight: 600;
        margin: 0;
        margin-right: 20px;
      }
    }

    .searchButton {
      color: $dark;
      font-size: 8vh;
      border-radius: 50%;
      transition: .2s ease-in-out;

      &:hover {
        background-color: $light-1;
      }
    }
  }
}

// For bottom half section
.botSection {
  min-height: 100vh;
  width: 100%;
  background: linear-gradient(244.63deg, #30E3CA -7.2%, rgba(48, 227, 202, 0) 67.45%), #11999E;
  overflow: hidden;
  position: fixed;
  justify-content: center;

  .bubblesLeft {
    position: absolute;
    left: -15vh;
    margin-top: 8vh;
  }
  .bubblesRight {
    position: absolute;
    right: -15vh;
  }

  .coursesContainer {
    @include coursesHorizontalPadding;
    position: fixed;
    width: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    top: 45vh;
    bottom: 0;
    transition: 1s ease-in-out;

    .noCourses {
      color: white;
      font-family: $OpenSans;
      font-size: 2vh;
    }
  }
}

// For CourseItem
.hideCoursesLeft {
  transform: translateX(-150%);
}
.courseItemBox {
  @include itemContainer;
  margin-bottom: 2.5vh;
  border-radius: 20px;
  box-shadow: 0px 4px 34px rgba(0, 0, 0, 0.08);

  .imageContainer {
    justify-content: center;
    align-items: center;
    width: 13vh;
    height: 10vh;
    background-color: $lightest;
    margin-left: 2vh;
    margin-top: 1.5vh;
    margin-bottom: 1.5vh;
    border-radius: 20px;
  }

  .infoContainer {
    margin-left: 2vh;
    padding-top: 3vh;
    padding-bottom: 3vh;

    .courseName {
      font-weight: 600;
      font-family: $OpenSans;
      font-size: 2.5vh;
      color: $darkest;
      margin: 0;
    }
    .gradeLevel {
      @include tag($green-tag, $green-text);
      margin: 0;
    }
  }

  .detailsButtonContainer {
    margin-right: 3%;    
    margin-left: 3%;  

    .detailsButton {
      @include roundedButton;
      
      color: white;
      padding-left: 3vh;
      padding-right: 3vh;
      padding-top: 2vh;
      padding-bottom: 2vh;
      
      &:hover {
        box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.25);
      }
    }
    .mobileDetailsButton {
      color: $dark;
      display: none;
    }
  }
}
.extraInfo {
  font-family: $OpenSans;
  font-size: 1.8vh;
  color: #9AA2A1;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
}

.fadeInSection {
  opacity: 0;
  transform: translateY(6vh);
  visibility: hidden;
  transition: opacity 1200ms ease-out, transform 600ms ease-out,
  visibility 1200ms ease-out;
  will-change: opacity, transform, visibility;
}
.isVisible {
  opacity: 1;
  transform: none;
  visibility: visible;
}

// For details item
.hideDetailsRight {
  transform: translateX(150%) !important;
}
.detailsItemContainer {
  @include itemContainer;
  z-index: 3000;
  width: 80%;
  margin-top: 5%;
  margin-bottom: 3vh;
  transition: 1s ease-in-out;

  .detailsInfoContainer {
    padding: 3vh;
    padding-left: 7vh;
    padding-right: 7vh;
    margin: 0;

    .courseNameDetails {
      font-size: 2.7vh;
      margin: 0;
      padding-bottom: 1vh;
    }
    
    .backButton {
      color: $dark;
      margin-right: 1vh;
      margin-left: -1.5vh;
      padding: 0;
      padding-bottom: 1vh;

      &:hover {
        background-color: $lightest;
      }

      .backButtonIcon {
        font-size: 5vh;
      }
    }

    .tagDetails {
      margin: 0;

      .gradeLevelDetailsTag {
        @include tag($green-tag, $green-text);
        margin: 0;
        margin-right: 1.5vh;
        margin-top: 1vh;
      }
      .priceDetailsTag {
        @include tag($yellow-tag, $yellow-text);
        margin: 0;
        margin-right: 1.5vh;
        margin-top: 1vh;
      }
      .lessonsTotalDetailsTag {
        @include tag($red-tag, $red-text);
        margin: 0;
        margin-top: 1vh;
      }
    }
    .descriptionDetails {
      font-family: $OpenSans;
      font-weight: 300;
      color: $darkest;
      font-size: 2.1vh;
    }
    .trialDetails {
      font-size: 2.1vh;
      font-family: $OpenSans;
      font-weight: 600;
      color: $dark;
    }
  }
  .imageDetailsContainer {
    justify-content: center;
    align-items: center;
    width: 39vh;
    height: 30vh;
    background-color: $lightest;
    margin-right: 6vh;
    margin-top: 6vh;
    margin-bottom: 6vh;
    border-radius: 20px;
  }
}

@media only screen and (max-width: 1060px) {
  .imageDetailsContainer {
    display: none;
  }
}
@media only screen and (max-width: 600px) {
  /* For mobile phones: */
  .title {
    font-size: 2.7vh !important;
  }

  .subtitle {
    font-size: 1.5vh !important;
  }

  .arrowButton {
    font-size: 2.5vh !important;
  }

  .bubblesTopLeft, .bubblesLeft, .bubblesRight, .imageDetailsContainer{
    display: none;
  }

  .courseItemBox {
    margin-bottom: 1.5vh;
  }
  .searchContainer {
    font-size: 1.5vh !important;
    margin-top: -.01vh !important;
  }

  .gradeSliderContainer {
    margin-top: 2vh;
    padding: 15px !important;
    padding-left: 20px !important;
    padding-right: 30px !important;

    .gradeLabel {
      font-size: 1.5vh;
    }
  }

  .imageContainer {
    display: none;
  }
  .infoContainer {
    padding-top: 2vh !important;
    padding-bottom: 2vh !important;

    .courseName {
      font-size: 1.8vh !important;
    }
    .gradeLevel {
      font-size: 1.3vh !important;
    }
  }
  .detailsButton {
    font-size: 1.3vh !important;
    padding: 1.6vh 2vh !important;
    display: none;
  }
  .mobileDetailsButton {
    display: block !important;
    width: 5vh;
    height: 5vh;
  }
  .courseNameDetails {
    font-size: 2.3vh !important;
  }
  .backButtonIcon {
    font-size: 3vh;
  }
  .extraInfo {
    font-size: 1.2vh !important;
  }
  .gradeLevelDetailsTag, .priceDetailsTag, .lessonsTotalDetailsTag{
    font-size: 1.2vh !important;
  }
  .descriptionDetails, .trialDetails {
    font-size: 1.5vh !important;
  }
}

